--- a/index.html
+++ b/index.html
@@ -1,102 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=display-widt,initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Mono&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta name="viewport" content="width=display-widt,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto+Mono&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/7aab0fc5d4.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-        <div class="container">
-            <div class="intro">
-                <img class="profile-picture" src="images/profile -picture.jpg">
-                <h1 id="my-name">Lincoln Gibson</h1>
-                <h3>Web Developer, UI & UX Designer.</h3>
-                <p>{{Learn while you can, live while you can, do what you can, because one day you can't.}}</p>
-            </div>
-
-            <hr>
-
-            <div class="about-grid">
-               <div class="I-am">
-                <h1>I am</h1>
-                <ul class="about-list">
-                    <li>An Engaging</li>
-                    <li>An Reader</li>
-                    <li>An Hobby Cook</li>
-                </ul>
-                </div>
-
-                <div class="I-like">
-                <h1>I like</h1>
-                   <ul class="about-list">
-                   <li>Meet New People</li>
-                   <li>Play Video Games</li>
-                   <li>Eat Cake</li>
-                   </ul>
-                </div>
-            </div>
-
-            <hr>
-
-            <div>
-                <h3 class="project-heading">Project Heading</h3>
-                <div class="project-grid">
-                    <div class="project-image-wrapper">
-                      <img class="project-images" src="images/project-1.jpg"><h4>Project 1</h4>
-                  </div>
-                  <div class="project-image-wrapper">
-                      <img class="project-images"  src="images/project-2.jpg"><h4>Project 2</h4>
-                  </div>
-                  <div class="project-image-wrapper">
-                      <img class="project-images"  src="images/project-3.jpg"><h4>Project 3</h4>      
-                  </div>
-                  <div class="project-image-wrapper">
-                      <img class="project-images"  src="images/project-4.jpg"><h4>Project 4</h4>
-                  </div>
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="Links-and-contact">
-                <div class="links">
-                    <h3>Links</h3>
-                    <ul class="links-list">
-                        <li>
-                            <a href="https://github.com/lincoln1883">Github</a>
-                        </li>
-                        <li>
-                           <a href="https://twitter.com/lincolngibson7">Twitter</a> 
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/in/lincoln-gibson-632a54217">Linkedin</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <hr>
-
-                <div>
-                    <form action="#">
-                        <label for="email">
-                            <h4>Email:</h4>
-                            <input id="email" placeholder="enter your email">
-                        </label>
-                        <label for="message">
-                            <h4>Message:</h4>
-                            <textarea id="message">your message</textarea>
-                        </label>
-                        <div class="submit-button-wrapper">
-                          <input id="submit-button" type="Submit" value ="send message">
-                        </div>           
-                    </form>
-                </div>
-            </div>
-        </div>
+  <div class="container">
+    <div class="intro">
+      <img class="profile-picture" src="https://images.unsplash.com/photo-1627762899602-23ac186f1333?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDkxfHRvd0paRnNrcEdnfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60">
+      <h1 id="my-name">Lincoln Gibson</h1>
+      <h3>Web Developer,Web Designer.</h3>
+      <p>{{Learn while you can, live while you can, because one day you may only be left with regrets or memories.}}</p>
     </div>
-<script src="script.js"></script>
-</html>    
-</body>        
- 
+
+    <hr>
+
+    <div class="about-grid">
+      <div class="I-am">
+        <h1>I am</h1>
+        <ul class="about-list">
+          <li>Engaging</li>
+          <li>Enthusiastic</li>
+          <li>Eager to learn</li>
+          <li>Reserved</li>
+        </ul>
+      </div>
+
+      <div class="I-like">
+        <h1>I like to</h1>
+        <ul class="about-list">
+          <li>Meet New People</li>
+          <li>Play Video Games</li>
+          <li>Challenge Myself</li>
+          <li>Travel</li>
+        </ul>
+      </div>
+    </div>
+
+    <hr>
+
+    <div>
+      <h3 class="project-heading">Project Heading</h3>
+      <div class="project-grid">
+        <div class="project-image-wrapper">
+          <img class="project-images" src="images/project-1.jpg">
+          <h4>Project 1</h4>
+        </div>
+        <div class="project-image-wrapper">
+          <img class="project-images" src="images/project-2.jpg">
+          <h4>Project 2</h4>
+        </div>
+        <div class="project-image-wrapper">
+          <img class="project-images" src="images/project-3.jpg">
+          <h4>Project 3</h4>
+        </div>
+        <div class="project-image-wrapper">
+          <img class="project-images" src="images/project-4.jpg">
+          <h4>Project 4</h4>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="Links-and-contact">
+      <div class="links">
+        <h3>Links</h3>
+        <ul class="links-list">
+          <li>
+            <a href="https://github.com/lincoln1883"><i class="fab fa-github"></i></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/lincolngibson7"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="https://linkedin.com/in/lincoln-gibson-632a54217"><i class="fab fa-linkedin"></i></a>
+          </li>
+        </ul>
+      </div>
+
+      <hr>
+
+      <div>
+        <form action="#">
+          <label for="email">
+            <h4>Email:</h4>
+            <input id="email" placeholder="enter your email">
+          </label>
+          <label for="message">
+            <h4>Message:</h4>
+            <textarea id="message">your message</textarea>
+          </label>
+          <div class="submit-button-wrapper">
+            <input id="submit-button" type="Submit" value="send message"required>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
